src/objects/PTO_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>PTO Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PTO Requests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>